[package]
name = "contact-api"
version = "0.1.0"
edition = "2021"

[dependencies]
lettre = { version = "0.11.7", features = ["rustls-tls", "rustls-native-certs", "builder", "hostname", "pool", "smtp-transport"], default-features = false }
signal-hook = "0.3.17"

[dependencies.rustls]
version = "0.23.12"
default-features = false

[profile.release]
strip = true
opt-level = "s"
lto = true
panic = "abort"
